--- a/Autonomous+driving+application+-+Car+detection+-+v3.ipynb
+++ b/Autonomous+driving+application+-+Car+detection+-+v3.ipynb
@@ -298,124 +298,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.953143"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(ans[0][0][0][8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "car found [3.8894632 2.8953984]  In Block 0  where corner of this block is 0,0\n",
-      "car found [5.1083665 3.6969028]  In Block 0  where corner of this block is 0,0\n",
-      "car found [3.1286972 2.4804163]  In Block 0  where corner of this block is 0,0\n",
-      "car found [1.7162929 0.7956531]  In Block 0  where corner of this block is 0,0\n",
-      "car found [5.7616134 1.7103344]  In Block 0  where corner of this block is 0,0\n",
-      "car found [2.2037523 2.756255 ]  In Block 1  where corner of this block is 0,0\n",
-      "car found [1.6213822 0.3831641]  In Block 1  where corner of this block is 0,0\n",
-      "car found [-1.6448786 -1.3792961]  In Block 1  where corner of this block is 0,0\n",
-      "car found [4.6073093 4.2896714]  In Block 1  where corner of this block is 0,0\n",
-      "car found [1.457682  2.7122297]  In Block 2  where corner of this block is 0,0\n",
-      "car found [2.0367992 4.9620805]  In Block 2  where corner of this block is 0,0\n",
-      "car found [2.5485482 6.7795706]  In Block 2  where corner of this block is 0,0\n",
-      "car found [1.9176105 7.387638 ]  In Block 2  where corner of this block is 0,0\n",
-      "car found [-0.7397907 -0.608122 ]  In Block 2  where corner of this block is 0,0\n",
-      "car found [2.2191434 2.9006212]  In Block 3  where corner of this block is 0,0\n",
-      "car found [2.4515815 4.2290525]  In Block 3  where corner of this block is 0,0\n",
-      "car found [1.4549345 4.721727 ]  In Block 3  where corner of this block is 0,0\n",
-      "car found [3.4564095 0.2629231]  In Block 3  where corner of this block is 0,0\n",
-      "car found [ 2.0390468 -0.8320208]  In Block 3  where corner of this block is 0,0\n",
-      "car found [2.3178895 2.0217805]  In Block 4  where corner of this block is 0,0\n",
-      "car found [1.593279  2.6564827]  In Block 4  where corner of this block is 0,0\n",
-      "car found [0.6600449 2.2436132]  In Block 4  where corner of this block is 0,0\n",
-      "car found [2.5262775  0.15617357]  In Block 4  where corner of this block is 0,0\n",
-      "car found [ 1.9673744 -0.2803326]  In Block 4  where corner of this block is 0,0\n",
-      "car found [ 1.9563686  -0.62679195]  In Block 4  where corner of this block is 0,0\n",
-      "car found [2.3658888 2.4745538]  In Block 5  where corner of this block is 0,0\n",
-      "car found [1.9832844 2.5077734]  In Block 5  where corner of this block is 0,0\n",
-      "car found [2.7472558 1.8275433]  In Block 5  where corner of this block is 0,0\n",
-      "car found [3.7702463 2.9066648]  In Block 6  where corner of this block is 0,0\n",
-      "car found [3.4677052 3.2110245]  In Block 6  where corner of this block is 0,0\n",
-      "car found [3.14083   3.3916209]  In Block 6  where corner of this block is 0,0\n",
-      "car found [-0.01583698 -0.5328386 ]  In Block 6  where corner of this block is 0,0\n",
-      "car found [3.7093804  0.63079154]  In Block 6  where corner of this block is 0,0\n",
-      "car found [3.5975997 1.0393285]  In Block 6  where corner of this block is 0,0\n",
-      "car found [ 0.92999524 -1.9982655 ]  In Block 6  where corner of this block is 0,0\n",
-      "car found [ 0.81729674 -0.03889421]  In Block 6  where corner of this block is 0,0\n",
-      "car found [5.769121  4.3766623]  In Block 7  where corner of this block is 0,0\n",
-      "car found [4.7641344 4.116597 ]  In Block 7  where corner of this block is 0,0\n",
-      "car found [4.707321  3.5653033]  In Block 7  where corner of this block is 0,0\n",
-      "car found [4.1164465 3.2795622]  In Block 7  where corner of this block is 0,0\n",
-      "car found [3.3497553 2.5070758]  In Block 7  where corner of this block is 0,0\n",
-      "car found [2.2793844 2.4865224]  In Block 7  where corner of this block is 0,0\n",
-      "car found [-0.8614475 -0.4536084]  In Block 7  where corner of this block is 0,0\n",
-      "car found [1.9006007 2.3960433]  In Block 7  where corner of this block is 0,0\n",
-      "car found [-0.34830475 -0.61092573]  In Block 7  where corner of this block is 0,0\n",
-      "car found [-0.37076235 -0.81029165]  In Block 7  where corner of this block is 0,0\n",
-      "car found [-0.3644153 -0.9894974]  In Block 7  where corner of this block is 0,0\n",
-      "car found [-0.15874678 -1.1869037 ]  In Block 7  where corner of this block is 0,0\n",
-      "car found [ 0.56026554 -1.796874  ]  In Block 7  where corner of this block is 0,0\n",
-      "car found [ 0.45974186 -1.8134477 ]  In Block 7  where corner of this block is 0,0\n",
-      "car found [ 0.40293235 -1.0617387 ]  In Block 7  where corner of this block is 0,0\n",
-      "car found [6.4786806 5.670091 ]  In Block 8  where corner of this block is 0,0\n",
-      "car found [7.184293 5.242927]  In Block 8  where corner of this block is 0,0\n",
-      "car found [6.6670017 4.4625072]  In Block 8  where corner of this block is 0,0\n",
-      "car found [5.6396675 3.9827418]  In Block 8  where corner of this block is 0,0\n",
-      "car found [3.9377878 3.2683628]  In Block 8  where corner of this block is 0,0\n",
-      "car found [-0.11432508  7.443519  ]  In Block 8  where corner of this block is 0,0\n",
-      "car found [3.0169013 3.1099591]  In Block 8  where corner of this block is 0,0\n",
-      "car found [0.57566774 6.256531  ]  In Block 8  where corner of this block is 0,0\n",
-      "car found [3.2041645 3.1616452]  In Block 8  where corner of this block is 0,0\n",
-      "car found [2.8737638 2.5783741]  In Block 8  where corner of this block is 0,0\n",
-      "car found [-0.8988398  -0.92742383]  In Block 8  where corner of this block is 0,0\n",
-      "car found [-0.6648949 -1.1140354]  In Block 8  where corner of this block is 0,0\n",
-      "car found [-0.50407326 -1.3153698 ]  In Block 8  where corner of this block is 0,0\n",
-      "car found [-0.39474833 -1.536293  ]  In Block 8  where corner of this block is 0,0\n",
-      "car found [-0.5749271 -1.309317 ]  In Block 8  where corner of this block is 0,0\n",
-      "car found [5.501116  1.6178434]  In Block 9  where corner of this block is 0,0\n",
-      "car found [-0.54574156  5.386619  ]  In Block 9  where corner of this block is 0,0\n",
-      "car found [5.720793 5.965336]  In Block 9  where corner of this block is 0,0\n",
-      "car found [ 0.7745204  -0.73864114]  In Block 9  where corner of this block is 0,0\n",
-      "car found [0.69548   4.6488066]  In Block 9  where corner of this block is 0,0\n",
-      "car found [5.3585157 5.5255194]  In Block 9  where corner of this block is 0,0\n",
-      "car found [5.658513  4.7125926]  In Block 9  where corner of this block is 0,0\n",
-      "car found [5.6554537 3.792026 ]  In Block 9  where corner of this block is 0,0\n",
-      "car found [-0.270464   1.4600315]  In Block 12  where corner of this block is 0,0\n",
-      "car found [1.2955437  0.08929214]  In Block 12  where corner of this block is 0,0\n",
-      "car found [0.30254388 1.4008423 ]  In Block 12  where corner of this block is 0,0\n",
-      "car found [-0.08394295  1.2545124 ]  In Block 12  where corner of this block is 0,0\n",
-      "car found [ 1.5074463  -0.33151692]  In Block 12  where corner of this block is 0,0\n",
-      "car found [ 1.5123527  -0.40810767]  In Block 12  where corner of this block is 0,0\n",
-      "car found [0.8628985 0.9373669]  In Block 14  where corner of this block is 0,0\n",
-      "car found [-0.3649468  1.8144319]  In Block 14  where corner of this block is 0,0\n",
-      "car found [0.35001835 0.8484412 ]  In Block 14  where corner of this block is 0,0\n",
-      "car found [-0.6353148 -1.0521504]  In Block 14  where corner of this block is 0,0\n",
-      "car found [-2.1278949   0.28568155]  In Block 15  where corner of this block is 0,0\n",
-      "car found [-0.36759725 -0.89065874]  In Block 15  where corner of this block is 0,0\n",
-      "car found [-1.4974349  0.2162386]  In Block 16  where corner of this block is 0,0\n",
-      "car found [2.2588606 1.7651441]  In Block 18  where corner of this block is 0,0\n",
-      "4677 objects are detected as per yolo\n"
+      "[[(8, 2), -0.5486212, -0.5486212], [(9, 2), -0.25677833, -0.25677833], [(9, 2), 0.2168687, 0.2168687], [(9, 3), -0.09565647, -0.09565647], [(9, 3), 0.109509535, 0.109509535], [(9, 8), -0.69553083, -0.69553083], [(10, 7), 0.14148009, 0.14148009], [(11, 2), -0.52164155, -0.52164155], [(11, 5), 0.028243423, 0.028243423], [(11, 6), 0.02939453, 0.02939453], [(11, 7), 0.0880482, 0.0880482], [(11, 8), 0.08359819, 0.08359819], [(12, 6), -0.2729581, -0.2729581], [(12, 6), 0.05064427, 0.05064427], [(12, 12), -0.3229443, -0.3229443], [(12, 12), -0.4868123, -0.4868123], [(12, 15), -0.5047145, -0.5047145], [(12, 15), -0.62836564, -0.62836564], [(12, 15), -0.2287385, -0.2287385], [(12, 16), -0.26846552, -0.26846552], [(12, 18), 0.3501807, 0.3501807], [(13, 1), 0.15220198, 0.15220198], [(13, 2), -0.16121167, -0.16121167], [(13, 3), 0.571136, 0.571136], [(13, 5), 0.37841114, 0.37841114], [(13, 6), 0.24197638, 0.24197638], [(13, 6), -0.44717342, -0.44717342], [(13, 8), -0.2817536, -0.2817536], [(13, 10), 0.17174977, 0.17174977], [(13, 11), 0.46780032, 0.46780032], [(13, 15), 0.17865515, 0.17865515], [(13, 15), -0.4887173, -0.4887173], [(13, 15), -0.45378792, -0.45378792], [(14, 3), 0.2567165, 0.2567165], [(14, 6), -0.05140771, -0.05140771], [(14, 6), -0.33677986, -0.33677986], [(14, 8), 0.3178502, 0.3178502], [(14, 8), -0.36330447, -0.36330447], [(14, 10), 1.0896345, 1.0896345], [(14, 15), -0.20327796, -0.20327796], [(14, 18), 1.2310245, 1.2310245], [(15, 3), -0.32359436, -0.32359436], [(15, 10), -0.057945967, -0.057945967], [(15, 11), -0.08647622, -0.08647622], [(15, 14), -0.07318348, -0.07318348], [(15, 15), 0.010766596, 0.010766596], [(15, 18), 1.462274, 1.462274], [(16, 10), -0.111405134, -0.111405134], [(16, 11), -0.16351369, -0.16351369], [(16, 12), -0.10673634, -0.10673634], [(16, 12), -0.07356931, -0.07356931], [(17, 1), -0.13279209, -0.13279209], [(17, 7), -0.2664221, -0.2664221], [(17, 10), -0.24079424, -0.24079424], [(17, 16), -0.22969669, -0.22969669], [(18, 2), -1.0116218, -1.0116218]]\n"
      ]
     }
    ],
    "source": [
-    "count = 0\n",
     "boxes = []\n",
     "for i in range(19):\n",
-    "    for k in range(19):\n",
-    "        for j in range(0,425,8):\n",
-    "            if ans[0][i][k][j] > 0.9:\n",
-    "                count += 1\n",
-    "                vec = list(ans[0][i][k][j+5:j+85])\n",
-    "                if vec != []:\n",
+    "    for j in range(19):\n",
+    "        for k in range(0,425,85):\n",
+    "            vec = []\n",
+    "            if ans[0][i][j][k] > 0.5:\n",
+    "                    vec = list(ans[0][i][j][k+5:k+85])\n",
     "                    if vec.index(max(vec)) == 2:\n",
-    "                        print('car found',ans[0][i][k][j+1:j+3],' In Block',i, ' where corner of this block is 0,0')\n",
-    "                        boxes.append([i,ans[0][i][k][j+1],ans[0][i][k][j+2]])\n",
-    "print(count, 'objects are detected as per yolo')"
+    "                        #print('car found',ans[0][i][j][k+1:k+3],' In Block',(i,j))\n",
+    "                        boxes.append([(i,j),ans[0][i][j][k+3],ans[0][i][j][k+3]])\n",
+    "print(boxes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,16 +354,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "88"
+       "56"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
