--- a/QnABert/QuestionAndAnswers.ipynb
+++ b/QnABert/QuestionAndAnswers.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://rsilveira79.github.io/fermenting_gradients/machine_learning/nlp/pytorch/pytorch-transformer-squad/"
+    "#https://rsilveira79.github.io/fermenting_gradients/machine_learning/nlp/pytorch/pytorch-transformer-squad/\n",
+    "#download model from https://drive.google.com/drive/folders/1OnvT5sKgi0WVWTXnTaaOPTE5KIh-xg_E\n",
+    "#download model from https://drive.google.com/drive/folders/1e7wu9yI-rGkSzjoPU2TpCC9FMvlKvl8R"
    ]
   },
   {
