--- a/QnABert/QuestionAndAnswers.ipynb
+++ b/QnABert/QuestionAndAnswers.ipynb
@@ -128,6 +128,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xlnet = QuestionAnswering(\n",
+    "    config_file =   'xlnet-cased-finetuned-squad.json',\n",
+    "    weight_file=    'xlnet-cased-finetuned-squad.bin',\n",
+    "    tokenizer_file= 'xlnet-large-cased-spiece.txt',\n",
+    "    model_type =    'xlnet'\n",
+    ")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
